@@ -274,6 +274,7 @@ int get_all_ifs (int all, char*** ptr)
     return len;
 }
 
+#if defined(__linux__)
 short find_in_stab(const char* iface)
 {
     FILE *dn = NULL;
@@ -295,6 +296,7 @@ short find_in_stab(const char* iface)
     pclose(dn);
     return 0;
 }
+#endif
 
 char *find_in_devnames(const char* iface)
 {
